# obs-html-source

./: CMakeLists.txt  README.md  buildspec.json  html-source.c  html-source.cpp  html-source.h
data/locale/: en-US.ini
